--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       <div class="image" style="text-align: center;"><img width="300px" src="https://media.boopie.co/assets/2021/12/29011603/5.png"></div>
       <h2>Here is where you can mint your RagTag Aenar Character for 1 $BOOP.</h2>
       <p>You can mint as many as you want, but only 1 per transaction. Cool?</p>
-      <p>If you need instructions on how to get Sol into your wallet then check out our <a href="https://boopie.co/how-to-mint-boopies/">Minting Instructions page.</a></p>
+      <p>$BOOP was airdropped to Gen 1N holders that made the 12/28 snapshot.</p>
       <p>Be sure to read the <a href="https://boopie.co/story">Boopie Story.</a></p>
       <hr>
       <div id="root"></div>
