--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       <h1>Welcome to the RagTag: Aenar Mint Page</h1>
       <div class="image" style="text-align: center;"><img width="300px" src="https://media.boopie.co/assets/2021/12/29011603/5.png"></div>
       <h2>Here is where you can mint your RagTag Aenar Character for 1 $BOOP.</h2>
-      <p><strong>YOu'll also need to have around 0.011 SOL in your wallet to cover mint fees.</strong></p>
+      <p><strong>You'll also need to have around 0.011 SOL in your wallet to cover mint fees.</strong></p>
       <p>You can mint as many as you want, but only 1 per transaction. Cool?</p>
       <p>Even though the balance shows 0, if you have $BOOP in your wallet, you'll be able to mint.</p>
       <p>$BOOP was airdropped to Gen 1N holders that made the 12/28 snapshot.</p>
